- added some profile links

--- a/sali-site/Views/Home/Index.cshtml
+++ b/sali-site/Views/Home/Index.cshtml
@@ -7,3 +7,11 @@
     <h3>@ViewData["user_title"]</h3>
     <p style="color:gray">@ViewData["username"]</p>
 </div>
+
+<div class="text-center">
+    <a href="@ViewData["twitter_page"]" target="_blank"><i class="fa fa-twitter" style="font-size:36px;"></i></a>
+    <a href="@ViewData["youtube_url"]" target="_blank"><i class="fa fa-youtube" style="font-size:36px;"></i></a>
+    <a href="@ViewData["discord_url"]" target="_blank"><i class="fa fa-discord" style="font-size:36px;"></i></a>
+    <a href="@ViewData["github_url"]" target="_blank"><i class="fa fa-github" style="font-size:36px;"></i></a>
+    <a href="@ViewData["email"]"><i class="fa fa-envelope" style="font-size:36px;"></i></a>
+</div>
