--- a/sali-site/Views/Shared/_Layout.cshtml
+++ b/sali-site/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/css/dark-mode.css" rel="stylesheet" />
     <link rel="shortcut icon" href="~/favicon.ico" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css">
 </head>
 
 <body style='width: 100%;'>
