made some security tweaks

--- a/sali-site/Views/Shared/_Layout.cshtml
+++ b/sali-site/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">sali's site</a>
                 
                 <div class="custom-control custom-switch">
-                    <label id="refresh_data"><span style='font-size:17px;margin-right: 60px;'>🔄</span></label>
+                    @*<label id="refresh_data"><span style='font-size:17px;margin-right: 60px;'>🔄</span></label>*@
                     <input type="checkbox" class="custom-control-input" id="darkSwitch">
                     <label class="custom-control-label" for="darkSwitch"><span style='font-size:15px;'>🌙</span></label>
                 </div>
